Use secrets in the deployments

--- a/blog/wordpress.yaml
+++ b/blog/wordpress.yaml
@@ -12,6 +12,19 @@ spec:
     tier: frontend
   type: LoadBalancer
 ---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: wp-pv-claim
+  labels:
+    app: wordpress
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi
+---
 apiVersion: apps/v1beta2
 kind: Deployment
 metadata:
@@ -38,7 +51,17 @@ spec:
         - name: WORDPRESS_DB_HOST
           value: wordpress-mysql
         - name: WORDPRESS_DB_PASSWORD
-          value: wow_so_secure
+          valueFrom:
+            secretKeyRef:
+              name: db-info
+              key: DB_PASSWORD
         ports:
         - containerPort: 80
           name: wordpress
+        volumeMounts:
+        - name: wordpress-persistent-storage
+          mountPath: /var/www/html
+      volumes:
+      - name: wordpress-persistent-storage
+        persistentVolumeClaim:
+          claimName: wp-pv-claim
