--- a/blog/wordpress-mysql.yaml
+++ b/blog/wordpress-mysql.yaml
@@ -11,9 +11,20 @@ spec:
     app: wordpress
     tier: mysql
   clusterIP: None
-
 ---
-
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mysql-pv-claim
+  labels:
+    app: wordpress
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi 
+---
 apiVersion: apps/v1beta2
 kind: Deployment
 metadata:
@@ -43,3 +54,10 @@ spec:
         env:
         - name: MYSQL_ROOT_PASSWORD
           value: wow_so_secure
+        volumeMounts:
+        - name: mysql-persistent-storage
+          mountPath: /var/lib/mysql
+      volumes:
+      - name: mysql-persistent-storage
+        persistentVolumeClaim:
+          claimName: mysql-pv-claim
